syntax = "proto3";

option csharp_namespace = "GrpcServiceUser";



service UserOp {
  rpc Login (UserLoginEntry) returns (UserEntry);
  rpc UserAdd (UserEntry) returns (ResultStat);
  rpc UserUpdate (UserEntry) returns (ResultStat);
  rpc UserDelete (UserDeleteEntry) returns (ResultStat);
}


message UserEntry {
	string Name = 1;
	string LastName = 2;
	bool IsFemale = 3;
	string Address = 4;
	string Email = 5;
	string Password = 6;
}

message UserDeleteEntry {

}

message UserLoginEntry {
	string Email = 1;
	string Password = 2;
}

message ResultStat{
	bool Ok = 1;
}